<resources>
    <string name="app_name">Trashmap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Cadastro</string>
    <string name="menu_slideshow">Login</string>
    <string name="main_quem">Trabalho interdisciplinar envolvendo disciplinas do 4º período do curso de Sistemas de  Informação. Nosso github com as versões e codificações do projeto. O projeto foi feito por 5  alunos do 4º período VFeRoma(Bruno, Felipe, Rodrigo, Marcos, Mateus).</string>
    <string name="main_proj">Projeto de otimização para coleta de resíduos em Institutos Federais</string>
    <string name="main_quemTitulo">Quem Somos</string>
    <string name="main_focoTitulo">Foco Principal</string>
    <string name="main_foco">O projeto seria aplicado em diversos Campus e Instalações de pontos de reciclagem em  Institutos Federais. O foco inicial são os Campus localizados em Minas Gerais, e com o tempo aplicar o projeto para atingir outros pontos do Brasil.</string>
    <string name="main_github">Veja no Github</string>
    <string name="main_sabaraTitulo">Sabará</string>
    <string name="main_sabara">Nosso primeiro \"cliente\" será o Campus IFMG Sabará, que é o justamente o local de estudo dos  desenvolvedores da plataforma. E por meio de observação e praticidade de localização, os  integrantes do grupo decidiram começar por ele mesmo.</string>
    <string name="main_Bambuí">Por questão de praticidade também, o próximo Campus a ser aplicado seria o Bambuí pela proximidade de local e de interação com o Campus, seria uma ótima escolha pra segundo local  do projeto.</string>
    <string name="main_bambuiTitulo">Bambuí</string>
    <string name="nome">Nome</string>
    <string name="Usuario">Usuário</string>
    <string name="Senha">Senha</string>
    <string name="Senha2">Repita a senha</string>
    <string name="email">E-mail</string>
    <string name="RA">Registro Acadêmico (RA)</string>

    <string-array name="if_array">
        <item>Selecione seu IF</item>
        <item>Sabará</item>
        <item>Reitoria</item>
        <item>Bambuí</item>
        <item>Betim</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="Cadastrar">Criar</string>
    <string name="login">Entrar</string>
    <string name="nCadastro">Não está cadastrado? Crie Sua conta!</string>
    <string name="rank">Ranking</string>
    <string name="feed">Feedback</string>
    <string name="inicio">Início</string>
    <string name="conta">Conta</string>
    <string name="Bemvindo">Bem Vindo ...</string>
    <string name="info_index">Aqui você encontrará informações sobre como está seu Instituto com o Projeto TrashMap</string>
</resources>