<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_indexAluno">

    <fragment
        android:id="@+id/nav_home_indexAluno"
        android:name="com.example.trashmap.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_indexaluno" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="com.example.trashmap.ui.gallery.GalleryFragment"
        android:label="@string/rank"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.trashmap.ui.slideshow.SlideshowFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feedback"/>
    <fragment
        android:id="@+id/nav_contaAluno"
        android:name="com.example.trashmap.ui.slideshow.SlideshowFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_conta_aluno"/>
</navigation>