<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/tituloCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:paddingTop="10dp"
        android:text="@string/menu_gallery"
        android:textColor="@color/Azul"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="10dp" />

    <LinearLayout
        android:layout_width="417dp"
        android:layout_height="607dp"
        android:baselineAligned="true"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="5dp"
        android:paddingBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editName"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autoText="true"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName|textAutoComplete"
            android:textColorHighlight="@color/Azul"
            android:textColorLink="@color/Azul"
            android:textCursorDrawable="@color/Azul"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editUser"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoText="true"
            android:ems="10"
            android:hint="@string/Usuario"
            android:inputType="textPersonName|textAutoComplete"
            android:textColorHighlight="@color/Azul"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Senha"
            android:inputType="textPassword|textAutoComplete"
            android:textColorHighlight="@color/Azul"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editPassword2"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Senha2"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textAutoComplete|textEmailAddress" />

        <Spinner
            android:id="@+id/spinnerIF"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/if_array" />

        <Button
            android:id="@+id/buttonCriar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="cria"
            android:text="@string/Cadastrar"
            app:backgroundTint="@color/Azul" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>