<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lym"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/scrooll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="237dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/if_sabara" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/main_proj"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:clipToPadding="true"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/textViewTfoco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_quemTitulo"
                    android:textColor="@color/Azul"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewfoco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/main_quem"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttongit"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/main_github"
                    android:textSize="12sp"
                    app:backgroundTint="@color/Azul"
                    app:layout_constraintBottom_toBottomOf="@+id/view_main1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTfoco"
                    app:layout_constraintVertical_bias="0.0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/Azul"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_focoTitulo"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/main_foco"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="171dp"
                android:clipToPadding="true"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/textViewSabaraT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_sabaraTitulo"
                    android:textColor="@color/Azul"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewabara"
                    android:layout_width="wrap_content"
                    android:layout_height="119dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/main_sabara"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:background="@color/Azul"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/textViewbambuiTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_bambuiTitulo"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewbambui"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/main_Bambuí"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>